# grocy-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml  testbed-nightly.yml
docs/specs/: 2026-03-31-grocy-mcp-addon-plan.md  2026-03-31-grocy-mcp-design.md  2026-04-01-grocy-mcp-design.md  2026-04-01-grocy-mcp-implementation.md  2026-04-01-grocy-mcp-workflow-design.md
src/grocy_mcp/: __init__.py  auth_proxy.py  client.py  config.py  workflow_models.py
src/grocy_mcp/cli/: app.py
src/grocy_mcp/core/: batteries.py  calendar.py  chores.py  equipment.py  files.py  locations.py  meal_plan.py  recipes.py  reference_data.py  resolve.py  shopping.py  stock.py  stock_journal.py  system.py  tasks.py  workflows.py
src/grocy_mcp/mcp/: server.py
testbed/: __init__.py  compose.yaml
testbed/adapters/: __init__.py  anthropic.py  base.py  openai.py  openai_compatible.py
testbed/evaluators/: __init__.py  state.py
testbed/runners/: __init__.py  common.py  run_scenario.py  run_suite.py
testbed/seed/: __init__.py  auth_proxy.py  manage.py  session.py
tests/: conftest.py  test_batteries.py  test_calendar.py  test_chores.py  test_cli.py  test_client.py  test_config.py  test_equipment.py  test_files.py  test_locations.py  test_mcp.py  test_meal_plan.py  test_recipes.py  test_reference_data.py  test_resolve.py  test_shopping.py  test_stock.py  test_stock_journal.py  test_system.py  test_tasks.py  test_testbed.py  test_workflows.py
(+1 files in other folders)
