[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grocy-mcp"
version = "0.2.0"
description = "MCP server and CLI for Grocy with workflow tools, planning helpers, and household automation surfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Moustafa Attia" }]
keywords = ["grocy", "mcp", "cli", "home-automation", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "fastmcp>=3.2.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
grocy-mcp = "grocy_mcp.mcp.server:main"
grocy = "grocy_mcp.cli.app:main"

[project.urls]
Homepage = "https://github.com/moustafattia/grocy-mcp"
Repository = "https://github.com/moustafattia/grocy-mcp"
Issues = "https://github.com/moustafattia/grocy-mcp/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
